# forms

./: README.md  pyproject.toml
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
forms/: settings.py  urls.py
ui/angular/: package-lock.json
ui/angular/src/app/: app-routing.module.ts  app.component.html  app.component.ts
