[tool.poetry]
name = "forms"
version = "0.1.0"
description = "Custom Forms Creator Project"
authors = ["Denzzelindahouse <deniro-094@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
django-cors-headers = "^3.12.0"
django-modern-rpc = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
